@@ -186,18 +186,26 @@ void g15daemon_convert_buf(lcd_t *lcd, unsigned char * orig_buf)
 int uf_write_buf_to_g15(lcd_t *lcd)
 {
     int retval = 0;
+#ifdef OSTYPE_SOLARIS
+    retval = writePixmapToLCD(lcd->buf);
+#else
     pthread_mutex_lock(&g15lib_mutex);
     retval = writePixmapToLCD(lcd->buf);
     pthread_mutex_unlock(&g15lib_mutex);
+#endif    
     return retval;
 }
 
 int uf_read_keypresses(unsigned int *keypresses, unsigned int timeout) 
 {
     int retval=0;
+#ifdef OSTYPE_SOLARIS
+    retval = getPressedKeys(keypresses, timeout);
+#else
     pthread_mutex_lock(&g15lib_mutex);
     retval = getPressedKeys(keypresses, timeout);
     pthread_mutex_unlock(&g15lib_mutex);
+#endif    
     return retval;
 }
 
